<resources>
    <string name="app_name">serious news app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="breaking_news">Breaking News</string>
    <string name="learn_more"><![CDATA[Learn More ->]]></string>
    <string name="headlines_image_view">headlines image view</string>
    <string name="home">Home</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">general</string>
    <string name="health">health</string>
    <string name="science">science</string>
    <string name="sports">sports</string>
    <string name="technology">technology</string>
    <string name="discover">Discover</string>
    <string name="search">Search</string>
    <string name="news_from_all_over_the_world">News from all over the world</string>
</resources>