<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.DiscoverFragment">

    <TextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:text="@string/discover"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/news_from_all_over_the_world"
        android:textColor="@android:color/darker_gray"
        android:textSize="10sp"
        tools:ignore="SmallSp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/etSearch"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/discover_search_bg"
            android:drawableStart="@drawable/icons8_search_30px"
            android:elevation="15dp"
            android:hint="@string/search"
            android:padding="10dp"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/search_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/icons8_search_64px_1"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>



    <com.google.android.material.tabs.TabLayout
        android:id="@+id/discoverTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:tabContentStart="30dp"
        app:tabMode="scrollable">

        <com.google.android.material.tabs.TabItem

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business" />

        <com.google.android.material.tabs.TabItem

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entertainment" />

        <com.google.android.material.tabs.TabItem

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general" />

        <com.google.android.material.tabs.TabItem

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health" />

        <com.google.android.material.tabs.TabItem

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/science" />

        <com.google.android.material.tabs.TabItem

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports" />

        <com.google.android.material.tabs.TabItem

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technology" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/discoverRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp" />


</LinearLayout>