<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.HeadlineFragment">


    <ImageView
        android:id="@+id/newsOfTheDayImg"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/headlines_image_view" />


    <TextView
        android:id="@+id/newsOfTheDayTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="19dp"
        android:maxLines="3"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/newsOfTheDayTitleClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learn_more"
        android:layout_below="@id/newsOfTheDayTitle"
        android:layout_marginStart="19dp"
        android:layout_marginTop="18dp"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/breakingNews"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newsOfTheDayImg"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/breaking_news"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/country_spinner"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_below="@id/newsOfTheDayImg"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/spinner_bg"
        android:elevation="15dp"
        android:padding="10dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/headLinesRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/breakingNews"
        android:layout_marginTop="25dp" />


</RelativeLayout>